version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/Results/CompositeFailureResults/FaceSheetWrinklingSettings.rst.txt
.. vale off



:class:`FaceSheetWrinklingSettings`
===================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.Results.CompositeFailureResults.FaceSheetWrinklingSettings(internalObject: Ansys.Common.Interop.DSObjectsAuto.IDSCompositeFailureCriteriaAuto)

   Bases: :py:obj:`object`


   
   Defines the configuration for the Face Sheet Wrinkling failure criterion for sandwich structures.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FaceSheetWrinklingSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~Reset`
            - Resets the settings to their default values.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Active property.
          * - :py:attr:`~HomogeneousCoreCoefficient`
            - Gets or sets the wrinkling coefficient of homogeneous core materials.
          * - :py:attr:`~HoneycombCoreCoefficient`
            - Gets or sets the wrinkling coefficient of honeycomb core materials.
          * - :py:attr:`~WeightingFactor`
            - Gets or sets the weighting factor for the face sheet wrinkling criterion. The corresponding failure







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Active property.
















   ..
       !! processed by numpydoc !!

.. py:property:: HomogeneousCoreCoefficient
   :type: Optional[float]


   
   Gets or sets the wrinkling coefficient of homogeneous core materials.
















   ..
       !! processed by numpydoc !!

.. py:property:: HoneycombCoreCoefficient
   :type: Optional[float]


   
   Gets or sets the wrinkling coefficient of honeycomb core materials.
















   ..
       !! processed by numpydoc !!

.. py:property:: WeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the face sheet wrinkling criterion. The corresponding failure
       label is 'wt' for wrinkling at the top face, 'wb' at the bottom face.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Reset() -> None

   
   Resets the settings to their default values.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on